# DynamicArena

./: .gitignore  Cargo.toml  Makefile.toml  README.md  pentagon-chart.html  rule.md  statistics1.txt  statistics2.txt  summary.md
assets/: README.md
assets/images/: README.md  background.blend  skill_name1.xcf  skill_name3.xcf
controller/: controller.ino  controller_mpu6050.ino
controller/controller_s3/: controller_s3.ino
docs/: dynamicarena.js  index.html  rulebook.html  specification.html
docs/phone/: dynamicarena.js
pose/: back_kick1.json  back_kick2.json  bend_down.json  fire_ground.json  front_kick.json  hammer_down1.json  hammer_down2.json  idle.json  jump_backward1.json  jump_backward2.json  jump_backward34.json  jump_backward5.json  jump_forward1.json  jump_forward2.json  jump_forward34.json  jump_forward5.json  jump_up1.json  jumping_kick.json  jumpup2.json  kick1.json  kick2.json  loser.json  pose-editor.py  punch.json  roll_forward.json  stun_defence.json  thunder_punch.json  winner.json
src/: character_def.rs  choose_character.rs  confirm.rs  connect_controller.rs  main.rs  mainmenu.rs  result.rs  settings.rs
src/ingame/: agent.rs  controller.rs  mod.rs  pause.rs  phone.rs  player.rs  pose.rs  wasm.rs
src/ingame/bot/: agent.rs  dqn.rs  mod.rs
wasm_build/: enable_sound.js  index.html
