[package]
name = "dynamicarena"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_rapier2d = "0.28.0"

[profile.dev]
opt-level = 2

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.0"
burn = { version = "0.16.0", features = ["train", "wgpu"] }
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.77"
